--- a/docs/source/examples/s3_example.ipynb
+++ b/docs/source/examples/s3_example.ipynb
@@ -145,8 +145,8 @@
     "items, dataframe = geodes.search_items(\n",
     "    intersects=geometry,\n",
     "    query={\n",
-    "        \"spaceborne:cloudCover\": {\"lte\": 5},\n",
-    "        \"temporal:endDate\": {\"gte\": date},\n",
+    "        \"eo:cloud_cover\": {\"lte\": 5},\n",
+    "        \"end_datetime\": {\"gte\": date},\n",
     "    },\n",
     ")"
    ]
