--- a/docs/source/examples/search-and-download.ipynb
+++ b/docs/source/examples/search-and-download.ipynb
@@ -105,8 +105,8 @@
     "from pygeodes.utils.datetime_utils import complete_datetime_from_str\n",
     "\n",
     "query = {\n",
-    "    \"spaceborne:tile\": {\"eq\": \"T31TCK\"},\n",
-    "    \"temporal:endDate\": {\"gte\": complete_datetime_from_str(\"2023-01-01\")},\n",
+    "    \"grid:code\": {\"eq\": \"T31TCK\"},\n",
+    "    \"end_datetime\": {\"gte\": complete_datetime_from_str(\"2023-01-01\")},\n",
     "}\n",
     "items, dataframe = geodes.search_items(query=query)"
    ]
@@ -402,7 +402,7 @@
    "source": [
     "from pygeodes.utils.formatting import format_items\n",
     "\n",
-    "dataframe_new = format_items(dataframe, {\"spaceborne:cloudCover\"})"
+    "dataframe_new = format_items(dataframe, {\"eo:cloud_cover\"})"
    ]
   },
   {
@@ -423,7 +423,7 @@
    },
    "outputs": [],
    "source": [
-    "dataframe_filtered = dataframe_new[dataframe_new[\"spaceborne:cloudCover\"] < 30]"
+    "dataframe_filtered = dataframe_new[dataframe_new[\"eo:cloud_cover\"] < 30]"
    ]
   },
   {
@@ -934,9 +934,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "demo_finale",
+   "display_name": "pygeodes",
    "language": "python",
-   "name": "demo_finale"
+   "name": "pygeodes"
   },
   "language_info": {
    "codemirror_mode": {
@@ -948,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
