--- a/docs/source/user_guide/quickstart.ipynb
+++ b/docs/source/user_guide/quickstart.ipynb
@@ -19,7 +19,19 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Geodes' from 'pygeodes' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpygeodes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Geodes\n\u001b[1;32m      3\u001b[0m geodes \u001b[38;5;241m=\u001b[39m Geodes()\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Geodes' from 'pygeodes' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "from pygeodes import Geodes\n",
     "\n",
@@ -451,7 +463,7 @@
    "source": [
     "new_dataframe = format_collections(\n",
     "    collections,\n",
-    "    columns_to_add={\"summaries.dcs:satellite\", \"summaries.dcs:sensor\"},\n",
+    "    columns_to_add={\"summaries.constellation\", \"summaries.instruments\"},\n",
     ")"
    ]
   },
@@ -604,7 +616,7 @@
    "id": "003205c0-7707-4d1d-9a1e-0bbf6922176e",
    "metadata": {},
    "source": [
-    "We see we can use `spaceborne:absoluteOrbitID`. Let's search for example those whose orbit direction is 30972: "
+    "We see we can use `sat:absolute_orbit`. Let's search for example those whose orbit direction is 30972: "
    ]
   },
   {
@@ -646,8 +658,8 @@
     }
    ],
    "source": [
-    "query = {\"spaceborne:absoluteOrbitID\": {\"eq\": 30972}}\n",
-    "items, dataframe = geodes.search_items(query=query)"
+    "query = {\"sat:absolute_orbit\": {\"eq\": 30972}}\n",
+    "items, dataframe = geodes.search_items(query=query, collections=['PEPS_S2_L1C'])"
    ]
   },
   {
@@ -656,29 +668,6 @@
    "metadata": {},
    "source": [
     "Again, we come out with an `items` object, and a `dataframe` object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "68ab9b50-6120-4eb6-85ff-fefabdb96708",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "852"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(items)"
    ]
   },
   {
@@ -973,7 +962,7 @@
    "id": "8f3688df-a3d6-4e11-9138-1ab2c4e1e958",
    "metadata": {},
    "source": [
-    "We see we can use `spaceborne:cloudCover`. We can add it using `format_items`."
+    "We see we can use `eo:cloud_cover`. We can add it using `format_items`."
    ]
   },
   {
@@ -988,7 +977,7 @@
     "from pygeodes.utils.formatting import format_items\n",
     "\n",
     "new_dataframe = format_items(\n",
-    "    dataframe, columns_to_add={\"spaceborne:cloudCover\"}\n",
+    "    dataframe, columns_to_add={\"eo:cloud_cover\"}\n",
     ")"
    ]
   },
@@ -1217,8 +1206,8 @@
    "outputs": [],
    "source": [
     "filtered = new_dataframe[\n",
-    "    (new_dataframe[\"spaceborne:cloudCover\"] <= 40)\n",
-    "    & (new_dataframe[\"spaceborne:cloudCover\"] >= 39)\n",
+    "    (new_dataframe[\"eo:cloud_cover\"] <= 40)\n",
+    "    & (new_dataframe[\"eo:cloud_cover\"] >= 39)\n",
     "]"
    ]
   },
@@ -2306,9 +2295,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "demo_pygeodes",
+   "display_name": "pygeodes",
    "language": "python",
-   "name": "demo_pygeodes"
+   "name": "pygeodes"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2320,7 +2309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
